<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/file"
        android:title="@string/file"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/file_csv"
                android:title="@string/file_csv" />
            <item
                android:id="@+id/file_add"
                android:title="@string/file_add" />
            <item
                android:id="@+id/file_import"
                android:title="@string/file_import" />
            <item
                android:id="@+id/file_save"
                android:title="@string/file_save" />
            <item
                android:id="@+id/file_backup"
                android:title="@string/file_backup" />
        </menu>
    </item>
</menu>